--- a/src/components/sections/Experience.astro
+++ b/src/components/sections/Experience.astro
@@ -36,7 +36,7 @@ const SKILLS_ICONS: Record<string, any> = {
   Flutter,
 }
 ---
-<Section className={Astro.props.className} title="Experience">
+<Section className={Astro.props.className} title="Parcours professionnel">
   <ul class="flex flex-col">
     {work.map(({ name, startDate, endDate, position, summary, responsibilities, achievements, url, skills, location, location_type }) => {
       const startYear = new Date(startDate).getFullYear()
