--- a/src/components/sections/About.astro
+++ b/src/components/sections/About.astro
@@ -5,7 +5,7 @@ import { basics } from "@cv";
 const { summary } = basics;
 ---
 
-<Section title="En quelques mots...">
+<Section title="En résumé...">
 	<p>
 		{summary}
 	</p>
