--- a/src/components/sections/Education.astro
+++ b/src/components/sections/Education.astro
@@ -13,13 +13,8 @@ import { certificates } from "@cv";
 					{certificates.map(({ name, date, issuer, url }) => {
 						const certificateYear = new Date(date).getFullYear();
 						return (
-							<div class="flex items-baseline">
-								<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="mr-2 hidden h-5 w-5 self-start md:inline-block print:hidden">
-									<path d="M15 12h-5" />
-									<path d="M15 8h-5" />
-									<path d="M19 17V5a2 2 0 0 0-2-2H4" />
-									<path d="M8 21h12a2 2 0 0 0 2-2v-1a1 1 0 0 0-1-1H11a1 1 0 0 0-1 1v1a2 2 0 1 1-4 0V5a2 2 0 1 0-4 0v2a1 1 0 0 0 1 1h3" />
-								</svg>
+							<div class="flex items-baseline gap-2">
+								<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24"><path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 20h4L18.5 9.5a2.828 2.828 0 1 0-4-4L4 16zm9.5-13.5l4 4"/></svg>
 								<div class="relative w-full items-baseline justify-between gap-2">
 									<h3 class="mr-6 items-baseline gap-x-2 gap-y-0.5 font-medium">
 										<a class="hover:text-skin-hue group flex items-center gap-[6px] text-skin-base decoration-dotted underline-offset-[5px] hover:underline" href={url} target="_blank">
