--- a/src/components/sections/Experience.astro
+++ b/src/components/sections/Experience.astro
@@ -54,7 +54,7 @@ const SKILLS_ICONS: Record<string, any> = {
                 <div class="inline-flex items-center text-lg print:text-base leading-tight group/link focus-visible:text-amber-500" aria-label="{position} - {company}">
                   <span>{position} <span class="text-skin-muted">|</span> 
                   {url ? (
-                    <a class="text-skin-hue" href={url} title={`Ver ${name}`} target="_blank">{name}</a>
+                    <a class="text-skin-hue" href={url} title={`Consulter : ${name}`} target="_blank">{name}</a>
                   ) : (
                     <span>{name}</span>
                   )}
@@ -73,7 +73,7 @@ const SKILLS_ICONS: Record<string, any> = {
                   {location} {location && location_type && '-'} {location_type}
                 </div>
               )}
-              <div class="mt-4  print:gap-0 flex flex-col gap-4 print:text-xs text-sm" x-data="{ expanded: false }">
+              <div class="mt-4  print:gap-0 flex flex-col gap-4 print:text-xs text-sm" x-data="{ expanded: true }">
                 {summary && (
                   <div class="flex flex-col gap-1">
                     <h4>Missions</h4>
@@ -114,7 +114,7 @@ const SKILLS_ICONS: Record<string, any> = {
                 )}
                 </div>
                 
-                <button @click="expanded = ! expanded" class="print:hidden group/more w-fit cursor-pointer items-center justify-center gap-1.5 text-xs underline text-skin-muted transition-all hover:text-skin-base flex">
+                <button @click="expanded = ! expanded" class="hidden print:hidden group/more w-fit cursor-pointer items-center justify-center gap-1.5 text-xs underline text-skin-muted transition-all hover:text-skin-base flex">
                   <span x-text="expanded ? 'Fermer' : 'Dérouler'">Dérouler</span>
                   <svg class="w-4 h-4 group-hover/more:translate-y-0.5 duration-200 ease-out" :class="{ 'rotate-180': expanded }" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="6 9 12 15 18 9"></polyline></svg>
                 </button>
